[package]
name = "gl-marching_cubes"
version = "0.1.0"
authors = ["Andreas Klavenes Berg <andreaskb98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
gl = "0.14.0"
tobj = "3.2.2"
image = "0.24.2"
nalgebra-glm = "0.17.0"
noise = "0.7.0"
rand = "0.8.5"
itertools = "0.10.3"
rayon = "1.5.3"
