[package]
name = "gl-marching_cubes"
version = "0.1.0"
authors = ["Andreas K. Berg <andreaskb98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
gl = "0.14.0"
tobj = "4.0.0"
image = "0.24.2"
nalgebra-glm = "0.18.0"
noise = "0.8.2"
rand = "0.8.5"
itertools = "0.11.0"
rayon = "1.5.3"
